--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="article-wrapper">
 				<article id="main-article" class="article show-article">
 					<figure>
-						<h1>دانلود اپلیکیشن های « مای<span>ما</span><span>ی</span> <span>مو</span><span>و</span><span>یز</span> »</h1>
+						<h1>دانلود اپلیکیشن های « <span>ما</span><span>ی</span> <span>مو</span><span>و</span><span>یز</span> »</h1>
 					</figure>
 					<figcaption>
 						<div class="btn windows">
